[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Arcane Nine.otf" type="DynamicFontData" id=1]
[ext_resource path="res://script/LevelFailed.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/PNG/You_Lose/Table.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/PNG/You_Lose/Star_01.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/PNG/You_Lose/Window.png" type="Texture" id=10]
[ext_resource path="res://assets/UI/PNG/You_Lose/Header.png" type="Texture" id=11]
[ext_resource path="res://assets/UI/PNG/You_Lose/Record.png" type="Texture" id=12]
[ext_resource path="res://assets/UI/PNG/You_Lose/Replay_BTN.png" type="Texture" id=13]
[ext_resource path="res://assets/UI/PNG/You_Lose/Close_BTN.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 53
font_data = ExtResource( 1 )

[node name="LevelFailed" type="Node"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Panel" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -463.0
margin_top = -348.0
margin_right = 1097.0
margin_bottom = 1060.0
rect_scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 10 )
expand = true

[node name="Title" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.0
margin_top = -318.0
margin_right = 265.0
margin_bottom = -258.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="StarOne" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -356.004
margin_top = -140.0
margin_right = -64.004
margin_bottom = 140.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="StarTwo" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -230.0
margin_right = 216.0
margin_bottom = 50.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="StartThree" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 211.0
margin_top = -140.0
margin_right = 503.0
margin_bottom = 140.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="RecordActual" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 54.0
margin_top = 44.0
margin_right = 415.0
margin_bottom = 145.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 8 )

[node name="RecordTitle" type="Sprite" parent="Control/RecordActual"]
position = Vector2( -371, 50 )
texture = ExtResource( 12 )

[node name="Record" type="Label" parent="Control/RecordActual"]
margin_left = 167.143
margin_top = 14.2858
margin_right = 318.143
margin_bottom = 78.2858
custom_fonts/font = SubResource( 1 )

[node name="VBoxContainer" type="HBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -221.0
margin_top = 174.0
margin_right = 381.0
margin_bottom = 390.0
rect_scale = Vector2( 0.7, 0.7 )
custom_constants/separation = 158

[node name="Retry" type="Button" parent="Control/VBoxContainer"]
pause_mode = 2
margin_right = 222.0
margin_bottom = 216.0
icon = ExtResource( 13 )
flat = true

[node name="Cancel" type="Button" parent="Control/VBoxContainer"]
pause_mode = 2
margin_left = 380.0
margin_right = 602.0
margin_bottom = 216.0
icon = ExtResource( 14 )
flat = true

[connection signal="pressed" from="Control/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
